tests/run/error_break_outside_loop.out
tests/run/error_break_outside_loop.em:3:5: error: 'break' outside of a loop
