tests/run/error_break_outside_loop.em
// error_break_outside_loop.em — 'break' is only legal inside a loop.
fn main() -> int {
    break
    return 0
}
